feat(api): categories crud op
