# docs/api/swagger.yaml
@@ -21,6 +21,17 @@ definitions:
       stockAmount:
         type: integer
     type: object
+  aroma-hub_internal_models.Category:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      updatedAt:
+        type: string
+    type: object
   aroma-hub_internal_models.Product:
     properties:
       brand:
@@ -98,6 +109,48 @@ info:
   title: Aroma-Hub API
   version: "1.0"
 paths:
+  /categories:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of categories with optional filtering
+      parameters:
+      - description: Category ID
+        in: query
+        name: id
+        type: string
+      - description: Category name
+        in: query
+        name: name
+        type: string
+      - description: Limit number of results
+        in: query
+        name: limit
+        type: integer
+      - description: Page number for pagination
+        in: query
+        name: page
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of categories
+          schema:
+            items:
+              $ref: '#/definitions/aroma-hub_internal_models.Category'
+            type: array
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/errx.Error'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/errx.Error'
+      summary: List categories
+      tags:
+      - categories
   /products:
     get:
       consumes:
