# internal/application/dto/category.go
@@ -1,7 +1,14 @@
 package dto
 
+import "aroma-hub/internal/models"
+
 type CreateCategoryRequest struct {
 	Name string `json:"name" validate:"required"`
+}
+
+type ListCategoryResponse struct {
+	Categories []models.Category `json:"categories"`
+	Total      int64             `json:"total"`
 }
 
 type ListCategoryFilter struct {
